feat(server): /user/check を追加
